--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "vadym-zahrebelnyi",email = "zahrebelnyivadym@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12.8"
+requires-python = "~=3.12.8"
 dependencies = [
     "django (>=5.1,<6.0)",
     "djangorestframework (>=3.16.1,<4.0.0)",
