--- a/.env.sample
+++ b/.env.sample
@@ -8,4 +8,4 @@ POSTGRES_PORT=
 
 STRIPE_SECRET_KEY=STRIPE_SECRET_KEY
 STRIPE_PUBLISHABLE_KEY=STRIPE_PUBLISHABLE_KEY
-STRIPE_WEBHOOK_SECRET=None  # not implemented yet
+STRIPE_WEBHOOK_SECRET=STRIPE_WEBHOOK_SECRET
