--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,22 +35,10 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
 
-  redis:
-    image: redis:7-alpine
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    restart: always
-    healthcheck:
-      test: [ "CMD", "redis-cli", "ping" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
   celery:
     build:
       context: .
-    command: celery -A hotel_booking_service worker --loglevel=info
+    command: python -m celery -A hotel_booking_service worker --loglevel=info
     env_file:
       - .env
     depends_on:
@@ -107,4 +95,4 @@ volumes:
   db_data:
   media_data:
   static_data:
-  redis_data:
+#  redis_data:
