chore: add ci.yml and add to ignore some linter codes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,11 @@ ignore = [
     "E501",
     "D",
     "RUF012",
+    "ARG001",
+    "ARG002",
+    "ARG005",
+    "DJ008",
+    "N818"
 ]
 
 [tool.ruff.lint.isort]
