--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,6 +105,6 @@ jobs:
           POSTGRES_PORT: 5432
           REDIS_HOST: localhost
           REDIS_PORT: 6379
-          TELEGRAM_API_TOKEN: "dummy_token"
+          TELEGRAM_BOT_TOKEN: "dummy_token"
           CHAT_ID: "123456789"
         run: poetry run python manage.py test
